# neural_network

./: .gitignore  README.md
cpp/: CMakeLists.txt
cpp/liberror/: CMakeLists.txt
cpp/liberror/src/: SizeMismatchException.cpp  SizeMismatchException.h
cpp/libneuron/: CMakeLists.txt
cpp/libneuron/src/: HiddenNeuron.cpp  HiddenNeuron.h  InputNeuron.cpp  InputNeuron.h  Neuron.cpp  Neuron.h  OutputNeuron.cpp  OutputNeuron.h
cpp/libnn/: CMakeLists.txt
cpp/libnn/src/: ActivationFunctions.h  Network.cpp  Network.h  NetworkConfig.h
cpp/libwrapper/: CMakeLists.txt
cpp/libwrapper/src/: Wrapper.cpp  Wrapper.h
cpp/libwrapper/src/img/: Imgwrapper.cpp  Imgwrapper.h
cpp/test/: CMakeLists.txt
cpp/test/src/: TestMain.cpp
cpp/test/src/tests/: testImgwrapper.cpp  testNetworkConfig.cpp  testNeuronActivationCalculation.cpp
cpp/test/src/util/: TestRunner.cpp  TestRunner.h
